[package]
name = "symbiosis-api"
version = "0.1.0"
edition = "2021"
authors = ["phnaharris <phnanh.harris@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ethers-core = { git = "https://github.com/phnaharris/ethers-rs", features = [
  "legacy",
], branch = "phnaharris/viction-support" }
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.189"
serde_json = "1.0.107"
serde_with = "3.4.0"
smart-default = "0.7.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
